[package]
authors = ["Moritz Moeller <virtualritz@protonmail.com>"]
description = "Peripheral access API for MSP430f249 microcontroller"
keywords = ["no-std", "msp430", "ti", "launchpad"]
license = "MIT OR Apache-2.0"
name = "msp430f249"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ryandedesignworks/msp430f6736"

[dependencies]
bare-metal = "1.0.0"
critical-section = { version = "1.0", optional = true }
msp430 = "0.4.0"
msp430-rt = { version = "0.4.0", optional = true }
vcell = "0.1.0"

[features]
rt = ["msp430-rt/device"]
